# SSHE-Worker

./: CMakeLists.txt  README.md
include/: ObliviousMapper.h  SCIHarness.h  TaskUtil.h  TaskqHandler.h
src/: ObliviousMapper.cpp  SCIHarness.cpp  Task.cpp  TaskUtil.cpp  TaskqHandler.cpp
test/: client_test.cpp  server_test.cpp  test.cpp
